# hotel-ddd-hex

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/application/ports/: guest_repository.py  reservation_repository.py  room_repository.py
app/application/use_cases/: create_reservation.py
app/domain/entities/: guest.py  reservation.py  room.py
app/domain/enums/: reservation_status.py
app/domain/value_objects/: date_range.py
app/infrastructure/api/: reservation_router.py
app/infrastructure/database/: connection.py  models.py
app/infrastructure/repositories/: postgres_guest_repository.py  postgres_reservation_repository.py  postgres_room_repository.py
